# Halcyon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Resources/: instanced_shader.frag  instanced_shader.vert  shader.frag  shader.vert
Src/: Application.cpp  Application.h  ContextInit.h  CoreInit.h  SceneInit.h  Window.cpp  Window.h  glad.c  main.cpp
Src/Core/: ECSManager.h  GeneralManager.h
Src/Core/Components/: ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Components.h
Src/Core/Contexts/: ContextManager.h
Src/Core/Entitys/: ActiveEntitySet.h  EntityManager.h
Src/Core/Systems/: System.h  SystemContextual.h  SystemManager.h  SystemSubscribed.h
Src/ECSCore/: ECSManager.h  TransformUtils.h
Src/ECSCore/Components/: ComponentManager.h  Components.h
Src/ECSCore/Entitys/: EntityManager.h
Src/ECSCore/Systems/: CameraSystem.h  MovementSystem.h  RenderingSystem.h  RotationSystem.h  System.h  SystemManager.h
Src/GLFWCore/: InputEvent.h  Window.cpp  Window.h
Src/GLFWCore/Components/: CursorPositionComponent.h  KeyboardStateComponent.h  MouseStateComponent.h  ScrollDeltaComponent.h  WindowComponent.h  WindowSizeComponent.h
Src/GLFWCore/Contexts/: InputDataContext.h  MainWIndowContext.h
Src/GLFWCore/Systems/: InputSolverSystem.h
Src/RenderCore/: AssetManager.h  Camera.h  MaterialAsset.h  MeshAsset.h  MultiDrawIndirectStructures.h  PrimitiveMeshFactory.cpp  PrimitiveMeshFactory.h  Shader.h  TransformUtils.h
Src/RenderCore/Components/: AssetManagerComponent.h  CameraComponent.h  RenderableComponent.h  ShaderComponent.h  TransformComponent.h
Src/RenderCore/Contexts/: AssetManagerContext.h  StandartShaderContext.h
Src/RenderCore/Systems/: CameraSystem.h  MultiDrawIndirectRenderingSystem.cpp  MultiDrawIndirectRenderingSystem.h  RenderingSystem.h
Src/SimulationCore/Components/: RotationSpeedComponent.h  VelocityComponent.h
Src/SimulationCore/Contexts/: MainCameraContext.h
Src/SimulationCore/Systems/: CameraSystem.h  ControlSystem.h  MovementSystem.h  RotationSystem.h
assets/shaders/: FXAA.slang  GTAO.slang  SSAO.slang  SSAOApply.slang  SSAOBlur.slang  aabb_debug.slang  bloom_upsample.slang  depth_prepass.slang  depth_pyramid.slang  downsample.slang  equirect_to_cube.slang  exposure.slang  frustrum_culling.slang  frustum_compaction.slang  frustum_culling.slang  gtao_apply.slang  gtao_blur.slang  hi_z_reduction.slang  irradiance_convolution.slang  sh_projection.slang  shader.slang  shadow.slang  shadow_frustum_culling.slang  skybox.slang  ssao_blur.slang  standard_forward.slang  tone_mapping.slang
assets/shaders/global_illumination/: gi_light_source_bake.slang  gi_probe_debug.slang  global_illumination_skybox.slang  sh_projection.slang
assets/shaders/particle_system/: particles_emiter.slang  particles_spawner.slang  system_render.slang
cmake/: HalcyonConfig.cmake.in  HalcyonHelpers.cmake
examples/: CMakeLists.txt  main.cpp
examples/Game/: GameInit.cpp  GameInit.hpp
examples/Game/Systems/: ControlSystem.cpp  ControlSystem.hpp  RotationSystem.cpp  RotationSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp
examples/assets/models/: cube.gltf
include/: App.hpp  DeletionQueue.hpp  DeletionQueueComponent.hpp  DeletionQueueContext.hpp  Halcyon.hpp  HalcyonExport.hpp  HalcyonGraphics.hpp  HalcyonPhysics.hpp  HalcyonPlatform.hpp  HalcyonSmith.hpp  IStartUp.hpp
include/GraphicsCore/: FrameData.hpp  GraphicsContexts.hpp  ImageDesc.hpp  SamplerDesc.hpp  ShaderReloader.hpp  SwapChain.hpp  VulkanConst.hpp  VulkanConvert.hpp  VulkanDevice.hpp  VulkanUtils.hpp
include/GraphicsCore/Components/: AutoExposureSettingsComponent.hpp  BufferManagerComponent.hpp  CameraComponent.hpp  CurrentFrameComponent.hpp  DeltaTimeComponent.hpp  DescriptorManagerComponent.hpp  DirectLightComponent.hpp  DrawInfoComponent.hpp  NameComponent.hpp  (+23 more)
include/PhysicsCore/: JoltGlm.hpp  PhysContexts.hpp  PhysLayers.hpp  PhysShapes.hpp
include/PlatformCore/: InputEvent.hpp  PlatformContexts.hpp  Window.hpp
include/SmithCore/: Phys.hpp  Renderables.hpp
shaders/: FXAA.slang  GTAO.slang  aabb_debug.slang  brdf_lut.slang  depth_prepass.slang  depth_pyramid.slang  equirect_to_cube.slang  frustum_compaction.slang  frustum_culling.slang  gtao_blur.slang  histogram.slang  prefilter_env_map.slang  reset_instance_count.slang  shadow_frustum_culling.slang  skybox.slang  standard_forward.slang  tone_mapping.slang  vignette.slang
shaders/global_illumination/: gi_bake_compaction.slang  gi_bake_cull.slang  gi_bake_reset.slang  gi_light_source_bake.slang  gi_probe_debug.slang  global_illumination_forward.slang  global_illumination_skybox.slang  sh_projection.slang
shaders/particle_system/: particles_emiter.slang  particles_spawner.slang  system_render.slang
src/: App.cpp  App.hpp  Cleanup.cpp  Cleanup.hpp  ContextInit.hpp  CoreInit.hpp  DeletionQueue.hpp  DeletionQueueComponent.hpp  DeletionQueueContext.hpp  IStartUp.hpp  MainLoop.cpp  MainLoop.hpp  SceneInit.hpp  ThirdPartyConfig.hpp  ThirdPartyImpl.cpp  main.cpp  pch.h
src/Core/: GeneralManager.hpp
src/Game/: GameInit.cpp  GameInit.hpp
src/Graphics/: DescriptorHandler.hpp  FrameData.hpp  GameObject.hpp  GraphicsContexts.hpp  GraphicsInit.cpp  GraphicsInit.hpp  MaterialAsset.cpp  MaterialAsset.hpp  Model.cpp  Model.hpp  PipelineHandler.hpp  PipelineManager.cpp  PipelineManager.hpp  ShaderReloader.cpp  ShaderReloader.hpp  SwapChain.hpp  VulkanConst.hpp  VulkanDevice.hpp  VulkanUtils.cpp  VulkanUtils.hpp
src/GraphicsCore/: ShaderReloader.cpp  ShaderReloader.hpp  SwapChain.hpp  VulkanConst.hpp  VulkanConvert.cpp  VulkanUtils.cpp  VulkanUtils.hpp
src/Orhescyon/: GeneralManager.hpp
src/PhysicsCore/: JoltGlm.hpp  PhysContexts.hpp  PhysShapes.hpp  PhysicsCleanup.cpp  PhysicsCleanup.hpp  PhysicsInit.cpp  PhysicsInit.hpp
src/Platform/: InputEvent.hpp  PlatformContexts.hpp  PlatformInit.cpp  PlatformInit.hpp  Window.cpp  Window.hpp
src/PlatformCore/: Platform.cpp  Platform.hpp  PlatformInit.cpp  PlatformInit.hpp  Window.cpp
src/SmithCore/: Phys.cpp  Phys.hpp  Renderables.cpp
(+414 files in other folders)
